--- a/ProjectPRN/ProjectPRN/Views/Shared/_Layout.cshtml
+++ b/ProjectPRN/ProjectPRN/Views/Shared/_Layout.cshtml
@@ -4,32 +4,168 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ProjectPRN</title>
+    <!-- ==== Favicon ==== -->
+    <link rel="icon" href="favicon.png" type="image/png">
+    <!-- ==== Google Font ==== -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700%7CRoboto:300,400,400i,500,700">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProjectPRN.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/plugins.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/responsive-style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/colors/color-1.css" asp-append-version="true" id="changeColorScheme" />
+    <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/1bd9fa3a2e.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ProjectPRN</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+<body class="wrapper">
+    <!-- Header Section Start -->
+    <header class="header--section style--1">
+        <!-- Header Topbar Start -->
+        <div class="header--topbar bg-black">
+            <div class="container">
+                <!-- Header Topbar Links Start -->
+                <ul class="header--topbar-links nav ff--primary float--left">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <span>En</span>
+                            <i class="fa fa-caret-down"></i>
+                        </a>
+
+                        <ul class="dropdown-menu">
+                            <li class="active"><a href="#">En</a></li>
+                            <li><a href="#">Bn</a></li>
+                            <li><a href="#">In</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <!-- Header Topbar Links End -->
+                <!-- Header Topbar Social Start -->
+                <ul class="header--topbar-social nav float--left hidden-xs">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                </ul>
+                <!-- Header Topbar Social End -->
+                <!-- Header Topbar Links Start -->
+                <ul class="header--topbar-links nav ff--primary float--right">
+                    <li>
+                        <a href="cart.html" title="Cart" data-toggle="tooltip" data-placement="bottom">
+                            <i class="fa fa-shopping-basket"></i>
+                            <span class="badge">3</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn-link">
+                            <i class="fa mr--8 fa-user-o"></i>
+                            <span>My Account</span>
+                        </a>
+                    </li>
+                </ul>
+                <!-- Header Topbar Links End -->
+            </div>
+        </div>
+        <!-- Header Topbar End -->
+        <!-- Header Navbar Start -->
+        <div class="header--navbar navbar bg-black" data-trigger="sticky">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#headerNav">
+                        <span class="sr-only">Toggle Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+
+                    <!-- Header Navbar Logo Start -->
+                    <div class="header--navbar-logo navbar-brand">
+                        <a href="index.html">
+                            <img src="~/image/logo.jpg" class="normal" alt="">
+                            <img src="~/image/logo.jpg" class="sticky" alt="">
+                        </a>
+                    </div>
+                    <!-- Header Navbar Logo End -->
+                </div>
+
+                <div id="headerNav" class="navbar-collapse collapse float--right">
+                    <!-- Header Nav Links Start -->
+                    <ul class="header--nav-links style--1 nav ff--primary">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <span>Home</span>
+                                @* <i class="fa fa-caret-down"></i> *@
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li><a href="home-1.html"><span>Home Version 1</span></a></li>
+                                <li><a href="home-2.html"><span>Home Version 2</span></a></li>
+                                <li><a href="home-3.html"><span>Home Version 3</span></a></li>
+                                <li><a href="home-4.html"><span>Home Version 4</span></a></li>
+                            </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <span>Community</span>
+                                @* <i class="fa fa-caret-down"></i> *@
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li><a href="activity.html"><span>Activity</span></a></li>
+                                <li><a href="members.html"><span>Members</span></a></li>
+                                <li><a href="groups.html"><span>Groups</span></a></li>
+                            </ul>
                         </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <span>BBPress</span>
+                                @* <i class="fa fa-caret-down"></i> *@
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li><a href="forums.html">Forums</a></li>
+                                <li><a href="sub-forums.html">Sub Forums</a></li>
+                                <li><a href="topics.html">Topics</a></li>
+                                <li><a href="topic-replies.html">Topic Replies</a></li>
+                            </ul>
+                        </li>
+                        
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <span>Products</span>
+                                @* <i class="fa fa-caret-down"></i> *@
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li><a href="products.html">Products</a></li>
+                                <li><a href="product-details.html">Product Details</a></li>
+                                <li><a href="cart.html">Cart</a></li>
+                                <li><a href="checkout.html">Checkout</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <span>Blog</span>
+                                @* <i class="fa fa-caret-down"></i> *@
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li><a href="blog-sidebar-right.html">Blog Sidebar Right</a></li>
+                                <li><a href="blog-sidebar-left.html">Blog Sidebar Left</a></li>
+                                <li><a href="blog-details.html">Blog Details</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact.html"><span>Contact</span></a></li>
                     </ul>
+                    <!-- Header Nav Links End -->
                 </div>
             </div>
-        </nav>
+        </div>
+        <!-- Header Navbar End -->
     </header>
+    <!-- Header Section End -->
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -41,6 +177,13 @@
             &copy; 2024 - ProjectPRN - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
+    <script src="~/js/plugins.min.js"></script>
+    <!-- ==== Color Switcher Plugin ==== -->
+    <script src="~/js/color-switcher.min.js"></script>
+    <!-- ==== Main Script ==== -->
+    <script src="~/js/main.js"></script>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
