--- a/ProjectPRN/ProjectPRN/wwwroot/css/style.css
+++ b/ProjectPRN/ProjectPRN/wwwroot/css/style.css
@@ -4962,7 +4962,7 @@ body.isScrolling #backToTop {
 }
 
 .header--navbar > container {
-    display: flex;
+    display: block;
     flex-direction: row;
 }
 
