--- a/ProjectPRN/ProjectPRN/wwwroot/css/custom.css
+++ b/ProjectPRN/ProjectPRN/wwwroot/css/custom.css
@@ -11,7 +11,6 @@ You can write your custom css styles in this file...
 
 */
 .header--section.style--1 {
-
 }
 
 #header--toppart > container {
@@ -20,6 +19,59 @@ You can write your custom css styles in this file...
 
 #sticky--wrapper {
     background: #6ab04c;
+}
+
+/*SEARCH BOX header*/
+#sticky--wrapper .container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-basis: 1000px;
+    padding: 5px 0;
+    margin: 0 20px;
+}
+
+#sticky--wrapper .container .navbar-header {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+}
+
+.search--header {
+    width: 25%;
+    height: 40px;   
+    display: flex;
+    align-items: center;
+}
+
+.search--header #search--form {
+    background: white;
+    width: 80%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    border-radius: 2px;
+    overflow: hidden;
+}
+
+.search--header #search--form input,
+.search--header #search--form button {
+    height: 100%;
+    border: none;
+    outline: none;
+}
+
+.search--header #search--form input {
+    width: 80%;
+    padding-left: 10px;
+    font-size: 13px;
+}
+
+.search--header #search--form button {
+    flex: 1;
+    background: transparent;
 }
 
 .footer--section .widget a {
